[package]
name = "sbibd"
version = "0.1.0"
edition = "2021"
authors = ["Jian Gao <icicle.flw@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7"
clap = { version = "4.1.13", features = ["derive"] }
criterion = { version = "0.4", features = ["html_reports"] }

[profile.dev]
opt-level = 1
overflow-checks = false
